--- a/index.html
+++ b/index.html
@@ -33,7 +33,44 @@
             </div>
         </div>
         <div class="bottom">
-           
+           <div class="left">
+                <div class="circle">
+                    <img src="./assest/img.jpeg" alt="">
+                </div>
+           </div>
+           <div class="right">
+                <div class="up">
+                    <button>About Me</button>
+                    <p id="head"> I am MERN stack Developer and DSA enthusiast,Learning DevOps !!!</p>
+                    <p id="light">Code, break, learn, repeat.</p>
+                </div>
+                <div class="down">
+                    <div class="info">
+                        <div>
+                            <h2>Name :</h2>
+                            <h3>Rohit Bhoj</h3>
+                        </div>
+                        <div>
+                            <h2>Phone :</h2>
+                            <h3>+91 798329176</h3> 
+                        </div>
+                        <div>
+                            <h2>Email :</h2>
+                            <h3>rohitbhoj8182@gail.com</h3>
+                        </div>
+                        <div>
+                            <h2>Twitter :</h2>
+                            <h3>Rohit8182</h3>
+                        </div>
+                    </div>
+                    <button id="Contact">
+                        Contact me
+                    </button>
+                    <button id="Download">
+                        Download my resume
+                    </button>
+                </div>
+           </div>
                 
         </div>
     </div>
